--- a/resources/sass/_misc.scss
+++ b/resources/sass/_misc.scss
@@ -29,3 +29,11 @@ code {
   font-size: $default-font-size;
   border-radius: 4px;
 }
+
+.text-dotted {
+  display: inline-block;
+  width: 250px;
+  white-space: nowrap;
+  overflow: hidden !important;
+  text-overflow: ellipsis;
+}
