--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -10,22 +10,27 @@
   width: auto;
 
   &.bg1 {
-    background: url(/img/background/user-info1.jpg) center center no-repeat;
+    background: url(/default/user-info1.jpg) center center no-repeat;
     background-size: cover;
   }
 
   &.bg2 {
-    background: url(/img/background/user-info2.jpg) center center no-repeat;
+    background: url(/default/user-info2.jpg) center center no-repeat;
     background-size: cover;
   }
 
   &.bg3 {
-    background: url(/img/background/user-info3.jpg) center center no-repeat;
+    background: url(/default/user-info3.jpg) center center no-repeat;
     background-size: cover;
   }
 
   &.bg4 {
-    background: url(/img/background/user-info4.jpg) center center no-repeat;
+    background: url(/default/user-info4.jpg) center center no-repeat;
+    background-size: cover;
+  }
+
+  &.bg5 {
+    background: url(/default/user-info5.jpg) center center no-repeat;
     background-size: cover;
   }
 
@@ -39,20 +44,25 @@
     margin-right: 1.437rem;
     width: 100%;
     height: $navbar-height;
+
     @media (max-width: 991px) {
       margin-left: 15px;
       margin-right: 15px;
     }
+
     .navbar-brand-wrapper {
       .navbar-brand {
         margin-left: 2.2rem;
         margin-right: 0.5rem;
+
         &.brand-logo-mini {
           display: none;
         }
+
         &.brand-logo {
           display: inline-block;
         }
+
         @media (max-width: 767px) {
           &.brand-logo {
             img {
@@ -62,16 +72,19 @@
         }
       }
     }
+
     .navbar-toggler {
       border: 0;
       color: inherit;
       font-size: 1.5rem;
       padding: 0;
+
       &:not(.navbar-toggler-right) {
         @media (max-width: 991px) {
           display: none;
         }
       }
+
       &.navbar-toggler-right {
         @media (max-width: 991px) {
           padding-left: 15px;
@@ -84,21 +97,26 @@
       @extend .d-flex;
       @extend .flex-row;
       @extend .align-items-center;
+
       .nav-item {
         margin-left: 1rem;
         margin-right: 1rem;
+
         &:last-child {
           margin-right: 0;
         }
+
         .nav-link {
           color: inherit;
           font-size: $navbar-font-size;
         }
+
         &.nav-search {
           .input-group {
             background: rgba($white, 0.13);
             border-radius: 4px;
             padding: 0.75rem;
+
             .form-control,
             .input-group-text {
               background: transparent;
@@ -106,9 +124,11 @@
               color: $white;
               padding: 0;
             }
+
             .form-control {
               color: $black;
               margin-left: 0.5rem;
+
               @include placeholder {
                 color: #001737;
                 font-weight: 600;
@@ -116,6 +136,7 @@
             }
           }
         }
+
         &.dropdown {
           .dropdown-menu {
             @extend .dropdownAnimation;
@@ -123,6 +144,7 @@
             -webkit-box-shadow: 0px 3px 21px 0px rgba(0, 0, 0, 0.2);
             box-shadow: 0px 3px 21px 0px rgba(0, 0, 0, 0.2);
           }
+
           .navbar-dropdown {
             position: absolute;
             font-size: 0.9rem;
@@ -145,6 +167,7 @@
               .badge {
                 margin-left: 2.5rem;
               }
+
               .ellipsis {
                 max-width: 200px;
                 overflow: hidden;
@@ -156,12 +179,15 @@
               margin: 0;
             }
           }
+
           i {
             margin-right: 0.5rem;
             vertical-align: middle;
           }
+
           @media (max-width: 991px) {
             position: static;
+
             .navbar-dropdown {
               left: 20px;
               right: 20px;
@@ -169,15 +195,18 @@
               width: calc(100% - 40px);
             }
           }
+
           .count-indicator {
             position: relative;
             padding: 0;
             text-align: center;
+
             i {
               font-size: 1.5rem;
               margin-right: 0;
               vertical-align: middle;
             }
+
             .count {
               position: absolute;
               left: 35%;
@@ -188,57 +217,69 @@
               font-size: 10px;
               line-height: 21px;
             }
+
             &:after {
               display: none;
             }
           }
         }
       }
+
       &.navbar-nav-right {
         @extend .align-self-stretch;
         @extend .align-items-stretch;
+
         .nav-item {
           @extend .d-flex;
           @extend .align-items-center;
         }
+
         @media (min-width: 992px) {
           margin-left: auto;
         }
       }
     }
+
     &.navbar-search-wrapper {
       background: $white;
       height: $navbar-height;
       border-radius: 1rem;
       background-color: $content-bg;
+
       .navbar-nav {
         &.navbar-nav-right {
           .nav-item {
             margin-left: 0.75rem;
             margin-right: 0.75rem;
+
             .nav-link {
               &.icon-link {
                 color: $black;
                 font-size: 1.55rem;
               }
             }
+
             &.nav-profile {
               @extend .d-flex;
               @extend .align-items-center;
               color: #001737;
+
               .nav-link {
                 img {
                   width: 2.187rem;
                   height: 2.187rem;
                   border-radius: 0.25rem;
                 }
+
                 .nav-profile-name {
                   margin-left: 0.5rem;
                   font-size: 0.9rem;
+
                   @media (max-width: 767px) {
                     display: none;
                   }
                 }
+
                 &.dropdown-toggle {
                   &::after {
                     font-size: 0.9rem;
@@ -246,11 +287,13 @@
                 }
               }
             }
+
             &.dropdown {
               .navbar-dropdown {
                 top: $navbar-height;
               }
             }
+
             &:last-child {
               margin-right: 1.75rem;
             }
@@ -263,14 +306,17 @@
   &.navbar-mini {
     height: $navbar-height;
     @extend .p-0;
+
     &.fixed-top {
       left: $sidebar-width-lg;
       transition: left $action-transition-duration $action-transition-timing-function,
         width $action-transition-duration $action-transition-timing-function;
+
       @media (max-width: 991px) {
         left: 0;
       }
     }
+
     .navbar-menu-wrapper {
       &.navbar-search-wrapper {
         @extend .d-none;
@@ -278,6 +324,7 @@
     }
   }
 }
+
 @media (max-width: 991px) {
   .navbar {
     -webkit-box-orient: horizontal;
@@ -286,12 +333,14 @@
     flex-direction: row;
     padding-top: 0;
     height: auto;
+
     .navbar-menu-wrapper {
       .navbar-brand-wrapper {
         .navbar-brand {
           margin-left: 0.875rem;
         }
       }
+
       .navbar-nav-right {
         margin-left: auto;
       }
@@ -310,6 +359,7 @@
   .navbar {
     .navbar-brand-wrapper {
       width: 55px;
+
       .brand-logo-mini {
         padding-top: 0px;
       }
